--- a/FilmReview/FilmReview/Views/Films/Index.cshtml
+++ b/FilmReview/FilmReview/Views/Films/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<FilmReview.Models.Film>
 
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <!DOCTYPE html>
