--- a/FilmReview/FilmReview/Views/News/Random.cshtml
+++ b/FilmReview/FilmReview/Views/News/Random.cshtml
@@ -1,8 +1,8 @@
-﻿
-@{
-    ViewBag.Title = "Random";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
+﻿@model FilmReview.Models.News
+    @{
+        ViewBag.Title = "Random";
+        Layout = "~/Views/Shared/_Layout.cshtml";
+    }
 
-<h2>Random</h2>
-
+    <h2>Random</h2>
+    <h3>@Model.Title</h3>
