--- a/FilmReview/FilmReview/Views/Home/Index.cshtml
+++ b/FilmReview/FilmReview/Views/Home/Index.cshtml
@@ -10,14 +10,15 @@
 </div>
 
 <div class="row">
-    <center><h1>News</h1></center>
+    <center><h1>Latest News</h1></center>
     <hr />
     @foreach (var item in Model.Take(3))
     {
-        <div class="col-md-4">
-            <h2>@Html.DisplayFor(modelItem => item.Title)</h2>
-            <p>@Html.DisplayFor(modelItem => item.Subtitle)</p>
-            <p>@Html.ActionLink("Read story", "Details", "News", new { id = item.NewsID }, new { @class= "btn btn-default" })</p>
-        </div>
+    <div class="col-md-4">
+        <h3 style="font-weight:bold;">@Html.DisplayFor(modelItem => item.Title)</h3>
+        <h4 style="color:#1818f3;">@Html.DisplayFor(modelItem => item.Date)</h4>
+        <p>@Html.DisplayFor(modelItem => item.Subtitle)</p>
+        <p>@Html.ActionLink("Read story", "Details", "News", new { id = item.NewsID }, new { @class = "btn btn-default" })</p>
+    </div>
     }
 </div>
