Navigation link for Films added and updated charts.

--- a/FilmReview/FilmReview/Views/Charts/Index.cshtml
+++ b/FilmReview/FilmReview/Views/Charts/Index.cshtml
@@ -13,7 +13,7 @@
         <th>@Html.DisplayNameFor(model => model.FilmName)</th>
         <th>@Html.DisplayNameFor(model => model.Genre.Name)</th>
     </tr>
-    @foreach (var item in Model)
+    @foreach (var item in Model.Take(10))
     {
         <tr>
             <td>@Html.DisplayFor(modelItem => item.Rating)</td>
