--- a/FilmReview/FilmReview/Views/Story/Index.cshtml
+++ b/FilmReview/FilmReview/Views/Story/Index.cshtml
@@ -23,8 +23,8 @@
     @foreach (var item in Model)
     {
     <tr>
-        <td width="75%">
-            <a href="~/News/Story/@item.NewsID">
+        <td width="70%">
+            <a href="~/News/Details/@item.NewsID">
                 <b>@Html.DisplayFor(modelItem => item.Title)</b>
             </a>
             <br />
@@ -35,6 +35,7 @@
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id = item.NewsID }) |
+            @Html.ActionLink("Details", "Details", new { id = item.NewsID }) |
             @Html.ActionLink("Delete", "Delete", new { id = item.NewsID })
         </td>
     </tr>
