--- a/FilmReview/FilmReview/Views/Charts/Index.cshtml
+++ b/FilmReview/FilmReview/Views/Charts/Index.cshtml
@@ -9,16 +9,33 @@
 <h3>Most Popular</h3>
 <table id="chart">
     <tr>
-        <th>@Html.DisplayNameFor(model => model.Rating)</th>
         <th>@Html.DisplayNameFor(model => model.FilmName)</th>
         <th>@Html.DisplayNameFor(model => model.Genre.Name)</th>
+        <th>@Html.DisplayNameFor(model => model.Rating)</th>
     </tr>
-    @foreach (var item in Model.Take(10))
+    @foreach (var item in Model.Take(5))
     {
         <tr>
-            <td>@Html.DisplayFor(modelItem => item.Rating)</td>
             <td><a href="~/Films/Details/@item.FilmId">@Html.DisplayFor(modelItem => item.FilmName)</a></td>
             <td>@Html.DisplayFor(modelItem => item.Genre.Name)</td>
+            <td>@Html.DisplayFor(modelItem => item.Rating)</td>
+        </tr>
+    }
+</table>
+<br />
+<h3>Most Reviewed(temporary)</h3>
+<table id="chart">
+    <tr>
+        <th>@Html.DisplayNameFor(model => model.FilmName)</th>
+        <th>@Html.DisplayNameFor(model => model.Genre.Name)</th>
+        <th>@Html.DisplayNameFor(model => model.Rating)</th>
+    </tr>
+    @foreach (var item in Model.Take(5))
+    {
+        <tr>
+            <td><a href="~/Films/Details/@item.FilmId">@Html.DisplayFor(modelItem => item.FilmName)</a></td>
+            <td>@Html.DisplayFor(modelItem => item.Genre.Name)</td>
+            <td>@Html.DisplayFor(modelItem => item.Rating)</td>
         </tr>
     }
 </table>
