--- a/FilmReview/FilmReview/Views/Films/Index.cshtml
+++ b/FilmReview/FilmReview/Views/Films/Index.cshtml
@@ -12,6 +12,7 @@
     <title>Index</title>
 </head>
 <body>
+    <h2>Films</h2>
     <p>
         @Html.ActionLink("Create New", "Create")
     </p>
@@ -31,29 +32,30 @@
             </th>
             <th></th>
         </tr>
-    
-    @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Genre.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FilmName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Rating)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.FilmId }) |
-                @Html.ActionLink("Details", "Details", new { id=item.FilmId }) |
-                @Html.ActionLink("Delete", "Delete", new { id=item.FilmId })
-            </td>
-        </tr>
-    }
-    
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Genre.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FilmName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Rating)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.FilmId }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.FilmId }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.FilmId })
+                </td>
+            </tr>
+        }
+
     </table>
 </body>
 </html>
