--- a/FilmReview/FilmReview/Views/Films/Details.cshtml
+++ b/FilmReview/FilmReview/Views/Films/Details.cshtml
@@ -19,35 +19,53 @@
             <dt>
                 @Html.DisplayNameFor(model => model.Genre.Name)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.Genre.Name)
             </dd>
-    
+
             <dt>
                 @Html.DisplayNameFor(model => model.FilmName)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.FilmName)
             </dd>
-    
+
             <dt>
                 @Html.DisplayNameFor(model => model.Rating)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.Rating)
             </dd>
-    
+
             <dt>
                 @Html.DisplayNameFor(model => model.Description)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.Description)
             </dd>
-    
+
+            <dt>
+                Reviews
+            </dt>
+
+            @if (Model.Review.Count == 0)
+            {
+                <dd>
+                    Be the first one to review!
+                </dd>
+            }
+
+            @foreach (var item in Model.Review)
+            {
+                <dd>
+                    @Html.DisplayFor(model => item.Description)
+                    (@Html.DisplayFor(model => item.DateAdded))
+                </dd>
+            }
         </dl>
     </div>
     <p>
