--- a/FilmReview/FilmReview/Views/Films/Details.cshtml
+++ b/FilmReview/FilmReview/Views/Films/Details.cshtml
@@ -70,6 +70,7 @@
             <dd>
                 @using (Html.BeginForm())
                 {
+                    @Html.AntiForgeryToken()
                     @Html.TextBoxFor(model => model.FilmId, new { style = "display: none;" })
                     @Html.TextArea("Review", "")
                     <br />
