--- a/FilmReview/FilmReview/Views/Films/Index.cshtml
+++ b/FilmReview/FilmReview/Views/Films/Index.cshtml
@@ -50,7 +50,7 @@
                 </td>
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.FilmId }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.FilmId }) |
+                    @Html.ActionLink("Details", "Title", new { id = item.FilmId }) |
                     @Html.ActionLink("Delete", "Delete", new { id = item.FilmId })
                 </td>
             </tr>
