--- a/FilmReview/FilmReview/Views/Films/Title.cshtml
+++ b/FilmReview/FilmReview/Views/Films/Title.cshtml
@@ -9,7 +9,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Details</title>
+    <title>Title</title>
 </head>
 <body>
     <div>
