Razor page titles have been edited.

--- a/FilmReview/FilmReview/Views/Charts/Index.cshtml
+++ b/FilmReview/FilmReview/Views/Charts/Index.cshtml
@@ -1,7 +1,6 @@
 ﻿@model IEnumerable<FilmReview.Models.Film>
-
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Charts";
 }
 
 <h2>Charts</h2>
