--- a/FilmReview/FilmReview/Views/Films/Index.cshtml
+++ b/FilmReview/FilmReview/Views/Films/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<FilmReview.Models.Film>
-
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "List of films";
 }
 
 <!DOCTYPE html>
@@ -9,7 +9,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
+    <title>List of films</title>
 </head>
 <body>
     <h2>Films</h2>
