--- a/FilmReview/FilmReview/Views/Films/Title.cshtml
+++ b/FilmReview/FilmReview/Views/Films/Title.cshtml
@@ -2,9 +2,9 @@
 @section Scripts {
     <script src="~/Scripts/rating.js"></script>
 }
-
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Film";
 }
 
 <!DOCTYPE html>
@@ -12,7 +12,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Title</title>
+    <title>Film</title>
     <script src="~/Scripts/rating.js"></script>
 </head>
 <body>
