--- a/FilmReview/FilmReview/Views/Films/Create.cshtml
+++ b/FilmReview/FilmReview/Views/Films/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model FilmReview.Models.Film
-
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Create Film";
 }
 
 <!DOCTYPE html>
