--- a/FilmReview/FilmReview/Views/Films/Delete.cshtml
+++ b/FilmReview/FilmReview/Views/Films/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model FilmReview.Models.Film
-
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Delete Film";
 }
 
 <!DOCTYPE html>
@@ -9,7 +9,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Delete</title>
+    <title>Delete Film</title>
 </head>
 <body>
     <h3>Are you sure you want to delete this?</h3>
