Few styling improvements made.

--- a/FilmReview/FilmReview/Views/Films/Edit.cshtml
+++ b/FilmReview/FilmReview/Views/Films/Edit.cshtml
@@ -12,6 +12,7 @@
     <title>Edit Film</title>
 </head>
 <body>
+    <h2>Edit</h2>
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
