--- a/FilmReview/FilmReview/Views/Films/Create.cshtml
+++ b/FilmReview/FilmReview/Views/Films/Create.cshtml
@@ -12,6 +12,7 @@
     <title>Create Film</title>
 </head>
 <body>
+    <h2>Create</h2>
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
