--- a/FilmReview/FilmReview/Views/Films/Delete.cshtml
+++ b/FilmReview/FilmReview/Views/Films/Delete.cshtml
@@ -12,51 +12,52 @@
     <title>Delete Film</title>
 </head>
 <body>
+    <h2>Delete</h2>
     <h3>Are you sure you want to delete this?</h3>
     <div>
-        <h4>Film</h4>
         <hr />
         <dl class="dl-horizontal">
             <dt>
                 @Html.DisplayNameFor(model => model.Genre.Name)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.Genre.Name)
             </dd>
-    
+
             <dt>
                 @Html.DisplayNameFor(model => model.FilmName)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.FilmName)
             </dd>
-    
+
             <dt>
                 @Html.DisplayNameFor(model => model.Rating)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.Rating)
             </dd>
-    
+
             <dt>
                 @Html.DisplayNameFor(model => model.Description)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.Description)
             </dd>
-    
+
         </dl>
-    
-        @using (Html.BeginForm()) {
+
+        @using (Html.BeginForm())
+        {
             @Html.AntiForgeryToken()
-    
+
             <div class="form-actions no-color">
-                <input type="submit" value="Delete" class="btn btn-default" /> |
-                @Html.ActionLink("Back to List", "Index")
+                <input type="submit" value="Delete" class="btn btn-danger" />
+                @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-default" })
             </div>
         }
     </div>
