MostReviewed chart created.

--- a/FilmReview/FilmReview/Content/bootstrap.css
+++ b/FilmReview/FilmReview/Content/bootstrap.css
@@ -52,6 +52,7 @@ template {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
+    text-align: center;
 }
 
 #chart td a {
@@ -71,7 +72,7 @@ template {
 #chart th {
     padding-top: 12px;
     padding-bottom: 12px;
-    text-align: left;
+    text-align: center;
     background-color: #5482b2;
     color: white;
 }
