--- a/FilmReview/FilmReview/Views/Charts/Index.cshtml
+++ b/FilmReview/FilmReview/Views/Charts/Index.cshtml
@@ -15,26 +15,24 @@
     @foreach (var item in Model.Take(5))
     {
         <tr>
-            <td><a href="~/Films/Details/@item.FilmId">@Html.DisplayFor(modelItem => item.FilmName)</a></td>
+            <td>@Html.DisplayFor(modelItem => item.FilmName)</td>
             <td>@Html.DisplayFor(modelItem => item.Genre.Name)</td>
             <td>@Html.DisplayFor(modelItem => item.Rating)</td>
         </tr>
     }
 </table>
 <br />
-<h3>Most Reviewed(temporary)</h3>
+<h3>Most Reviewed</h3>
 <table id="chart">
     <tr>
-        <th>@Html.DisplayNameFor(model => model.FilmName)</th>
-        <th>@Html.DisplayNameFor(model => model.Genre.Name)</th>
-        <th>@Html.DisplayNameFor(model => model.Rating)</th>
+        <th width="70%">@Html.DisplayNameFor(model => model.FilmName)</th>
+        <th>Reviewed</th>
     </tr>
-    @foreach (var item in Model.Take(5))
+    @foreach (var item in ViewData["MostReviewed"] as Dictionary<string, int>)
     {
         <tr>
-            <td><a href="~/Films/Details/@item.FilmId">@Html.DisplayFor(modelItem => item.FilmName)</a></td>
-            <td>@Html.DisplayFor(modelItem => item.Genre.Name)</td>
-            <td>@Html.DisplayFor(modelItem => item.Rating)</td>
+            <td>@Html.DisplayFor(modelItem => item.Key)</td>
+            <td>@Html.DisplayFor(modelItem => item.Value) times</td>
         </tr>
     }
 </table>
