Major colour scheme changes.

--- a/FilmReview/FilmReview/Views/Home/Index.cshtml
+++ b/FilmReview/FilmReview/Views/Home/Index.cshtml
@@ -10,13 +10,13 @@
 </div>
 
 <div class="row">
-    <center><h1>Latest News</h1></center>
+    <center><h2>Latest News</h2></center>
     <hr />
     @foreach (var item in Model.Take(3))
     {
         <div class="col-md-4">
             <h3 style="font-weight:bold;">@Html.DisplayFor(modelItem => item.Title)</h3>
-            <h4 style="color:#1818f3;">@Html.DisplayFor(modelItem => item.Date)</h4>
+            <h4 style="color:#767676;">@Html.DisplayFor(modelItem => item.Date)</h4>
             <p>@Html.DisplayFor(modelItem => item.Subtitle)</p>
             <p>@Html.ActionLink("Read story", "Story", "News", new { id = item.NewsID }, new { @class = "btn btn-default" })</p>
         </div>
