--- a/FilmReview/FilmReview/Views/News/Story.cshtml
+++ b/FilmReview/FilmReview/Views/News/Story.cshtml
@@ -5,7 +5,7 @@
 
 <br />
 <h3 style="font-weight:bold;">@Html.DisplayFor(model => model.Title)</h3>
-<h4 style="color:#1818f3;">@Html.DisplayFor(model => model.Date)</h4>
+<h4 style="color:#767676;">@Html.DisplayFor(model => model.Date)</h4>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.NewsID }) |
     @Html.ActionLink("Back to List", "Index")
