--- a/FilmReview/FilmReview/Views/Actors/Delete.cshtml
+++ b/FilmReview/FilmReview/Views/Actors/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model FilmReview.Models.Actor
 
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <!DOCTYPE html>
@@ -20,32 +20,33 @@
             <dt>
                 @Html.DisplayNameFor(model => model.Film.FilmName)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.Film.FilmName)
             </dd>
-    
+
             <dt>
                 @Html.DisplayNameFor(model => model.FirstName)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.FirstName)
             </dd>
-    
+
             <dt>
                 @Html.DisplayNameFor(model => model.LastName)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.LastName)
             </dd>
-    
+
         </dl>
-    
-        @using (Html.BeginForm()) {
+
+        @using (Html.BeginForm())
+        {
             @Html.AntiForgeryToken()
-    
+
             <div class="form-actions no-color">
                 <input type="submit" value="Delete" class="btn btn-default" /> |
                 @Html.ActionLink("Back to List", "Index")
