--- a/FilmReview/FilmReview/Views/Actors/Details.cshtml
+++ b/FilmReview/FilmReview/Views/Actors/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model FilmReview.Models.Actor
 
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <!DOCTYPE html>
@@ -19,27 +19,27 @@
             <dt>
                 @Html.DisplayNameFor(model => model.Film.FilmName)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.Film.FilmName)
             </dd>
-    
+
             <dt>
                 @Html.DisplayNameFor(model => model.FirstName)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.FirstName)
             </dd>
-    
+
             <dt>
                 @Html.DisplayNameFor(model => model.LastName)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.LastName)
             </dd>
-    
+
         </dl>
     </div>
     <p>
