Couple problems fixed.

--- a/FilmReview/FilmReview/Content/bootstrap.css
+++ b/FilmReview/FilmReview/Content/bootstrap.css
@@ -6079,6 +6079,7 @@ a.badge:focus {
     .container-fluid .jumbotron {
         padding-right: 60px;
         padding-left: 60px;
+        padding-top: 150px;
     }
 
     .jumbotron h1,
