--- a/FilmReview/FilmReview/Views/Shared/_Layout.cshtml
+++ b/FilmReview/FilmReview/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     <li>@Html.ActionLink("News", "Index", "News")</li>
                     <li>@Html.ActionLink("Films", "Index", "Films")</li>
                     <li>@Html.ActionLink("Charts", "Index", "Charts")</li>
+                    <li>@Html.ActionLink("Actors", "Index", "Actors")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
