--- a/FilmReview/FilmReview/Views/Shared/_Layout.cshtml
+++ b/FilmReview/FilmReview/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                     <li>@Html.ActionLink("Films", "Index", "Films")</li>
                     <li>@Html.ActionLink("Charts", "Index", "Charts")</li>
                     <li>@Html.ActionLink("Actors", "Index", "Actors")</li>
+                    <li> @Html.ActionLink("Directors", "Index", "Directors")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
